--- a/src/app/components/directives/stats/hand/compare.html
+++ b/src/app/components/directives/stats/hand/compare.html
@@ -36,16 +36,16 @@
             </table>
             <div class="row">
                 <div class="card col s12 m6">
-                    <qaobee-radar-chart></qaobee-radar-chart>
+                    <qaobee-radar-chart title="Actions positives offensives" owners="players" start-date="periodicityActive.startDate" end-date="periodicityActive.endDate" indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
                 </div>
                 <div class="card col s12 m6">
-                    <qaobee-radar-chart></qaobee-radar-chart>
+                    <qaobee-radar-chart title="Actions négatives offensives" owners="players" start-date="periodicityActive.startDate" end-date="periodicityActive.endDate" indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
                 </div>
                 <div class="card col s12 m6">
-                    <qaobee-radar-chart></qaobee-radar-chart>
+                    <qaobee-radar-chart title="Actions positives défensives" owners="players" start-date="periodicityActive.startDate" end-date="periodicityActive.endDate" indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
                 </div>
                 <div class="card col s12 m6">
-                    <qaobee-radar-chart></qaobee-radar-chart>
+                    <qaobee-radar-chart title="Actions négatives défensives" owners="players" start-date="periodicityActive.startDate" end-date="periodicityActive.endDate" indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
                 </div>
             </div>
         </div>
