--- a/src/app/components/directives/stats/hand/compare.html
+++ b/src/app/components/directives/stats/hand/compare.html
@@ -1,6 +1,12 @@
-<a ng-click="compare()" class="red-text text-lighten-1" href="" title="{{'mainEffective.buttons.compare' | translate}}">
+<a ng-click="compare()" class="red-text text-lighten-1 hide-on-small-only" href="" title="{{'mainEffective.buttons.compare' | translate}}">
     <i class="material-icons md-48">recent_actors</i>
 </a>
+
+<div class="fixed-action-btn hide-on-med-and-up" style="bottom: 45px; right: 94px;">
+<a ng-click="compare()" class="btn-floating btn-large red lighten-1" href="" title="{{'mainEffective.buttons.compare' | translate}}">
+    <i class="material-icons md-48">recent_actors</i>
+</a>
+    </div>
 
 <div id="modalCompare" class="modal">
     <div class="modal-content">
