--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -2,7 +2,7 @@
 <!-- body start-->
     <div class="row"></div>   
     
-    <!-- entete start -->
+    <!-- header start -->
     <div class="row blue-grey darken-2">
         <div class="col m1 hide-on-small-only center-align white-text">
             <br><i class="material-icons medium">people</i>
