--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -2,7 +2,7 @@
     <!-- body start-->
     <div class="row"></div>
 
-    <!-- entete start tablet and sup-->
+    <!-- header start tablet and sup-->
     <div class="row white hide-on-small-only">
         <div class="col s1 blue-grey-text text-darken-2 left-align">
             <i class="material-icons md-48">person</i>
@@ -20,9 +20,9 @@
             <qaobee-stat-compare items="compareList" kind="player" meta="meta"></qaobee-stat-compare>
         </div>
     </div>
-    <!-- entete end -->
+    <!-- header end -->
 
-    <!-- entete start smartphone-->
+    <!-- header start smartphone-->
     <div class="row white hide-on-med-and-up">
 
         <div class="col s12 left-align">
@@ -34,11 +34,11 @@
                 <a href="#/private/addPlayer/{{meta._id}}" class="btn-floating btn-large red lighten-1">
                     <i class="material-icons md-24">person_add</i>&nbsp;
                 </a>
-              <!--  <qaobee-stat-compare data-items="compareList" data-kind="player" data-meta="meta"></qaobee-stat-compare>-->
             </div>
+            <qaobee-stat-compare items="compareList" kind="player" meta="meta"></qaobee-stat-compare>
         </div>
     </div>
-    <!-- entete end -->
+    <!-- header end -->
 
     <div class="row">
 
@@ -58,6 +58,13 @@
             <li class="col l4 m6 s12" ng-repeat="player in players | filter:queryPlayer">
                 <div class="card white blue-grey-text text-darken-2">
                     <div class="card-content center-align cardPlayer">
+                        <div class="left">
+                            <input type="checkbox" ng-model="compareList[player._id]" name="compare"
+                                   class=""
+                                   ng-change="updatePlayerToCompare(player._id)"
+                                   ng-checked="compareList[player._id]" id="compare-{{player._id}}"/>
+                            <label for="compare-{{player._id}}"></label>
+                        </div>
                         <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="white-text">{{player.firstname}}
                             {{player.name}}</a></span>
                         <a href="#/private/viewPlayer/{{player._id}}">
@@ -75,23 +82,10 @@
                     </div>
 
                     <div class="card-action">
-                        <div class="row">
-                            <div class="col s6">
-                                <a href="#/private/playerStats/{{player._id}}"
-                                   class="btn waves-effect waves-light red lighten-1 white-text left">
-                                    <i class="fa fa-bar-chart"></i>
-                                </a>
-                            </div>
-                            <div class="col s6">
-                                <div class="right">
-                                    <input type="checkbox" ng-model="compareList[player._id]" name="compare"
-                                           class=""
-                                           ng-change="updatePlayerToCompare(player._id)"
-                                           ng-checked="compareList[player._id]" id="compare-{{player._id}}"/>
-                                    <label for="compare-{{player._id}}"></label>
-                                </div>
-                            </div>
-                        </div>
+                        <a href="#/private/playerStats/{{player._id}}"
+                           class="btn waves-effect waves-light red lighten-1 white-text left">
+                            <i class="fa fa-bar-chart"></i>
+                        </a>
                     </div>
                 </div>
             </li>
