--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -2,7 +2,7 @@
 <!-- body start-->
     <div class="row"></div>   
     
-    <!-- entete start tablet and sup-->
+    <!-- header start tablet and sup-->
     <div class="row white hide-on-small-only">
         <div class="col s1 blue-grey-text text-darken-2 left-align">
             <i class="material-icons md-48">group</i>
@@ -18,9 +18,9 @@
             </a>
         </div>
     </div>
-    <!-- entete end -->
+    <!-- header end -->
     
-    <!-- entete start smartphone-->
+    <!-- header start smartphone-->
     <div class="row white hide-on-med-and-up">
 
         <div class="col s12 left-align">
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <!-- entete end -->
+    <!-- header end -->
         
     <div class="row">
 
