--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -83,7 +83,7 @@
 
                     <div class="card-action">
                         <a href="#/private/playerStats/{{player._id}}"
-                           class="btn waves-effect waves-light red lighten-1 white-text left">
+                           class="btn waves-effect waves-light red lighten-1 white-text">
                             <i class="fa fa-bar-chart"></i>
                         </a>
                     </div>
