--- a/src/app/components/directives/stats/hand/actionsPosNeg.html
+++ b/src/app/components/directives/stats/hand/actionsPosNeg.html
@@ -1,7 +1,7 @@
 
 <div class="col l6 s12">
     <div class="card white">
-        <div class="card-title cardStatTitle center">
+        <div class="card-title colorMain center">
             <span class="white-text title"><small>{{'stats.actionTab.defense' | translate }}</small></span>
         </div>
         <div class="card-content" ng-show="noStat">
@@ -16,7 +16,7 @@
 
 <div class="col l6 s12">
     <div class="card white">
-        <div class="card-title cardStatTitle center">
+        <div class="card-title colorMain center">
             <span class="white-text title"><small>{{'stats.actionTab.attack' | translate }}</small></span>
         </div>
         <div class="card-content" ng-show="noStat">
