--- a/src/app/components/directives/stats/hand/efficiency.html
+++ b/src/app/components/directives/stats/hand/efficiency.html
@@ -1,6 +1,6 @@
 <!-- efficiency gauge -->
 <div class="card white" ng-if="bindToId==='gaugeEfficiencyGlobal'">
-    <div class="card-title cardStatTitle center">
+    <div class="card-title colorMain center">
             <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
@@ -19,7 +19,7 @@
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency9m'">
-    <div class="card-title cardStatTitle center">
+    <div class="card-title colorMain center">
             <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
@@ -38,7 +38,7 @@
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency6m'">
-    <div class="card-title cardStatTitle center">
+    <div class="card-title colorMain center">
             <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
@@ -57,7 +57,7 @@
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency7m'">
-    <div class="card-title cardStatTitle center">
+    <div class="card-title colorMain center">
             <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
