--- a/src/app/components/directives/stats/hand/goals.html
+++ b/src/app/components/directives/stats/hand/goals.html
@@ -1,5 +1,5 @@
 <div class="card white-text" ng-if="bindToId==='goalScored'">
-    <div class="card-title cardStatTitle center">
+    <div class="card-title colorMain center">
         <span class="white-text title"><small>{{'stats.resumeTab.goalScored' | translate }}</small></span>
     </div>
     <!-- 
@@ -21,7 +21,7 @@
 </div>
 
 <div class="card white-text" ng-if="bindToId==='goalConceded'">
-    <div class="card-title cardStatTitle center">
+    <div class="card-title colorMain center">
         <span class="white-text title"><small>{{'stats.resumeTab.goalConceded' | translate }}</small></span>
     </div>
     <!--
