--- a/src/app/modules/commons/users/profile/mainProfile.html
+++ b/src/app/modules/commons/users/profile/mainProfile.html
@@ -6,7 +6,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row moduleTitle white-text center">
+            <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="user" width="'100px'"></avatar>
                     <span class="small">{{'profile.label.avatar' | translate }}</span>
@@ -27,7 +27,7 @@
         <ul>
             <li class="col l4 m6 s12">
                 <div class="card white blue-grey-text text-darken-2">
-                    <div class="card-content center-align cardPlayer">
+                    <div class="card-content center-align colorMain">
                         <span class="card-content"><a href="#/private/viewPlayer/{{player._id}}" class="title white-text">{{'profile.tabs.profil' | translate }}</a></span>
                     </div>
                     <div class="card-content center-align">
@@ -44,7 +44,7 @@
             
             <li class="col l4 m6 s12">
                 <div class="card white blue-grey-text text-darken-2">
-                    <div class="card-content center-align cardPlayer">
+                    <div class="card-content center-align colorMain">
                         <span class="card-content"><a href="#/private/viewPlayer/{{player._id}}" class="title white-text">{{'profile.tabs.password' | translate }}</a></span>
                     </div>
                     <div class="card-content center-align">
@@ -61,7 +61,7 @@
             
             <li class="col l4 m6 s12">
                 <div class="card white blue-grey-text text-darken-2">
-                    <div class="card-content center-align cardPlayer">
+                    <div class="card-content center-align colorMain">
                         <span class="card-content"><a href="#/private/viewPlayer/{{player._id}}" class="title white-text">{{'profile.tabs.billing' | translate }}</a></span>
                     </div>
                     <div class="card-content center-align">
@@ -78,7 +78,7 @@
             
             <li class="col l4 m6 s12">
                 <div class="card white blue-grey-text text-darken-2">
-                    <div class="card-content center-align cardPlayer">
+                    <div class="card-content center-align colorMain">
                         <span class="card-content"><a href="#/private/viewPlayer/{{player._id}}" class="title white-text">{{'profile.tabs.settings' | translate }}</a></span>
                     </div>
                     <div class="card-content center-align">
@@ -95,7 +95,7 @@
             
             <li class="col l4 m6 s12">
                 <div class="card white blue-grey-text text-darken-2">
-                    <div class="card-content center-align cardPlayer">
+                    <div class="card-content center-align colorMain">
                         <span class="card-content"><a href="#/private/viewPlayer/{{player._id}}" class="title white-text">{{'profile.tabs.sharing' | translate }}</a></span>
                     </div>
                     <div class="card-content center-align">
