--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -54,7 +54,7 @@
             <li class="col l3 m6 s12" ng-repeat="team in listTeamHome | filter:queryTeam">
                 <!-- enable -->
                 <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===true">
-                    <div class="card-content cardPlayer white-text center">
+                    <div class="card-content colorMain white-text center">
                         <h5><small>{{team.label}}</small></h5>
                     </div>
                     
