--- a/src/app/components/directives/commons/filter/calendar.html
+++ b/src/app/components/directives/commons/filter/calendar.html
@@ -19,7 +19,7 @@
     <!-- Month Navigation--> 
     <div class="col s1 center" ng-if="periodicity=='month'">&nbsp;</div>
     <div class="col s1 center" ng-if="periodicity=='month'">
-        <a href="" ng-click="previousMonth()" class="btn-floating moduleTitle white-text left">
+        <a href="" ng-click="previousMonth()" class="btn-floating colorMain white-text left">
             <i class="mdi-navigation-chevron-left"></i>
         </a>
     </div>
@@ -27,7 +27,7 @@
         <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
     </div>
     <div class="col s1 center" ng-if="periodicity=='month'">
-        <a href="" ng-click="nextMonth()" class="btn-floating moduleTitle white-text right">
+        <a href="" ng-click="nextMonth()" class="btn-floating colorMain white-text right">
             <i class="mdi-navigation-chevron-right"></i>
         </a>
     </div>
@@ -36,7 +36,7 @@
     <!-- Quarter Navigation-->
     <div class="col s1 center" ng-if="periodicity=='quarter'">&nbsp;</div>
     <div class="col s1 center" ng-if="periodicity=='quarter'">
-        <a href="" ng-click="previousQuarter()" class="btn-floating moduleTitle white-text left">
+        <a href="" ng-click="previousQuarter()" class="btn-floating colorMain white-text left">
             <i class="mdi-navigation-chevron-left"></i>
         </a>
     </div>
@@ -44,7 +44,7 @@
         <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
     </div>
     <div class="col s1 center" ng-if="periodicity=='quarter'">
-        <a href="" ng-click="nextQuarter()" class="btn-floating moduleTitle white-text right">
+        <a href="" ng-click="nextQuarter()" class="btn-floating colorMain white-text right">
             <i class="mdi-navigation-chevron-right"></i>
         </a>
     </div>
@@ -53,7 +53,7 @@
     <!-- Season Navigation-->
     <div class="col s1 center" ng-if="periodicity=='season'">&nbsp;</div>
     <div class="col s1 center" ng-if="periodicity=='season'">
-        <a href="" ng-click="previousSeason()" class="btn-floating moduleTitle white-text left">
+        <a href="" ng-click="previousSeason()" class="btn-floating colorMain white-text left">
             <i class="mdi-navigation-chevron-left"></i>
         </a>
     </div>
@@ -61,7 +61,7 @@
         <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
     </div>
     <div class="col s1 center" ng-if="periodicity=='season'">
-        <a href="" ng-click="nextSeason()" class="btn-floating moduleTitle white-text right">
+        <a href="" ng-click="nextSeason()" class="btn-floating colorMain white-text right">
             <i class="mdi-navigation-chevron-right"></i>
         </a>
     </div>
@@ -92,7 +92,7 @@
     <div class="row" ng-if="periodicity=='month'">   
         <div class="col s1 center">&nbsp;</div>
         <div class="col s1 center" ng-if="periodicity=='month'">
-            <a href="" ng-click="previousMonth()" class="btn-floating moduleTitle white-text left">
+            <a href="" ng-click="previousMonth()" class="btn-floating colorMain white-text left">
                 <i class="mdi-navigation-chevron-left"></i>
             </a>
         </div>
@@ -100,7 +100,7 @@
             <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
         </div>
         <div class="col s1 center" ng-if="periodicity=='month'">
-            <a href="" ng-click="nextMonth()" class="btn-floating moduleTitle white-text right">
+            <a href="" ng-click="nextMonth()" class="btn-floating colorMain white-text right">
                 <i class="mdi-navigation-chevron-right"></i>
             </a>
         </div>
@@ -111,7 +111,7 @@
     <div class="row" ng-if="periodicity=='quarter'">
         <div class="col s1 center">&nbsp;</div>
         <div class="col s1 center" ng-if="periodicity=='quarter'">
-            <a href="" ng-click="previousQuarter()" class="btn-floating moduleTitle white-text left">
+            <a href="" ng-click="previousQuarter()" class="btn-floating colorMain white-text left">
                 <i class="mdi-navigation-chevron-left"></i>
             </a>
         </div>
@@ -119,7 +119,7 @@
             <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
         </div>
         <div class="col s1 center" ng-if="periodicity=='quarter'">
-            <a href="" ng-click="nextQuarter()" class="btn-floating moduleTitle white-text right">
+            <a href="" ng-click="nextQuarter()" class="btn-floating colorMain white-text right">
                 <i class="mdi-navigation-chevron-right"></i>
             </a>
         </div>
@@ -130,7 +130,7 @@
     <div class="row" ng-if="periodicity=='season'">
         <div class="col s1 center">&nbsp;</div>
         <div class="col s1 enter">
-            <a href="" ng-click="previousSeason()" class="btn-floating moduleTitle white-text left">
+            <a href="" ng-click="previousSeason()" class="btn-floating colorMain white-text left">
                 <i class="mdi-navigation-chevron-left"></i>
             </a>
         </div>
@@ -138,7 +138,7 @@
             <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
         </div>
         <div class="col s1 center" ng-if="periodicity=='season'">
-            <a href="" ng-click="nextSeason()" class="btn-floating moduleTitle white-text right">
+            <a href="" ng-click="nextSeason()" class="btn-floating colorMain white-text right">
                 <i class="mdi-navigation-chevron-right"></i>
             </a>
         </div>
