--- a/src/app/components/directives/stats/hand/playerUse.html
+++ b/src/app/components/directives/stats/hand/playerUse.html
@@ -1,5 +1,5 @@
 <div class="card light-blue lighten-1 white-text">
-    <div class="card-title center cardStatTitle">
+    <div class="card-title center colorMain">
         <span class="white-text title"><small>{{'stats.resumeTab.usePlayer' | translate }}</small></span>
     </div>
     <!--
