--- a/src/app/components/directives/stats/hand/sanction.html
+++ b/src/app/components/directives/stats/hand/sanction.html
@@ -1,5 +1,5 @@
 <div class="card white-text">
-    <div class="card-title cardStatTitle center">
+    <div class="card-title colorMain center">
         <span class="white-text title"><small>{{'stats.resumeTab.sanctions' | translate }}</small></span>
     </div>
     
