--- a/src/app/index.css
+++ b/src/app/index.css
@@ -26,12 +26,12 @@
   color: #646464 !important; 
 }
 
-.moduleTitle {
+.colorMain {
     background: linear-gradient(10deg, rgba(100, 100, 100, 1), rgba(60,63,65, 1));
     overflow: hidden;
 }
 
-.menuBgColor {
+.colorSecondary {
     background: linear-gradient(10deg, rgba(140, 190, 100, 1), rgba(102,187,106, 1));
     overflow: hidden;
 }
