--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -5,7 +5,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row blue-grey darken-2 white-text center-align">
+            <div class="row colorMain white-text center-align">
                 <div ng-hide="addEventTitle">
                     <div class="col s1">    
                         <h5><i class="fa fa-pencil-square-o"></i></h5>
