--- a/src/app/modules/sandbox/stats/event/eventStats.html
+++ b/src/app/modules/sandbox/stats/event/eventStats.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col s12">
             
-            <div class="row moduleTitle">
+            <div class="row colorMain">
                 <div class="col l2 m1 s12 white-text center hide-on-small-only">
                     &nbsp;
                 </div>
@@ -119,7 +119,7 @@
             
             <!-- Stats participants Start -->
             <div class="row" ng-if="players.length > 0">
-                <div class="col s12 white-text moduleTitle"><h5><i class="fa fa-bar-chart"></i> {{'stats.eventLabels.listPlayers' | translate }}</h5></div>
+                <div class="col s12 white-text colorMain"><h5><i class="fa fa-bar-chart"></i> {{'stats.eventLabels.listPlayers' | translate }}</h5></div>
                 <div class=" card col s12">
                     <!-- player -->
                     <table class="bordered responsive-table highlight">
