--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -7,7 +7,7 @@
         <div class="col s12">
             
             <!-- Entete-->
-            <div class="row cardPlayer">
+            <div class="row colorMain">
                 <div class="col l3 m3 center hide-on-small-only">
                     <avatar person="player" width="'100px'"></avatar>
                 </div>
