--- a/src/app/modules/sandbox/stats/team/teamStats.html
+++ b/src/app/modules/sandbox/stats/team/teamStats.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col s12">
             
-            <div class="row moduleTitle">
+            <div class="row colorMain">
                 <div class="col l2 m1 white-text center hide-on-small-only">
                     &nbsp;
                 </div>
