--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -66,6 +66,13 @@
             <li class="col l4 m6 s12" ng-repeat="player in players | filter:queryPlayer">
                 <div class="card white blue-grey-text text-darken-2">
                     <div class="card-content center-align colorMain">
+                        <div class="left">
+                            <input type="checkbox" ng-model="compareList[player._id]" name="compare"
+                                   class=""
+                                   ng-change="updatePlayerToCompare(player._id)"
+                                   ng-checked="compareList[player._id]" id="compare-{{player._id}}"/>
+                            <label for="compare-{{player._id}}"></label>
+                        </div>
                         <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="white-text">{{player.firstname}} {{player.name}}</a></span>
                         <a href="#/private/viewPlayer/{{player._id}}"><avatar person="player" width="'120px'" ></avatar></a>
                         <span class="white-text"> #{{player.status.squadnumber}}</span>
