--- a/src/app/components/directives/stats/radarChart.html
+++ b/src/app/components/directives/stats/radarChart.html
@@ -1,8 +1,7 @@
 <div class="card blue-grey darken-2">
-    <div class="card-title cardStatTitle center">
-        <span class="white-text title"><small ng-bind="title"></small></span>
+    <div class="card-title cardStatTitle activator center white-text title">
+        <small>{{title}}<i class="small material-icons right">more_vert</i></small>
     </div>
-
     <div class="card-content white center-align">
         <div ng-if="loading">
             <div class="preloader-wrapper big active">
@@ -26,5 +25,23 @@
                 chart-data="data" chart-labels="labels"
                 ng-if="!loading">
         </canvas>
+
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">{{title}}<i class="material-icons right">close</i></span>
+        <table>
+            <thead>
+            <tr>
+                <th data-field="indicators"></th>
+                <th ng-repeat="p in series track by $index" data-field="{{p}}" class="center-align" ng-bind="p"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr  ng-repeat="l in labels track by $index">
+                <td><b ng-bind="l"></b></td>
+                <td ng-repeat="d in data track by $index" data-field="{{d[$parent.$index]}}" class="center-align">{{d[$parent.$index]}}</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
