--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -26,10 +26,7 @@
                 ng-if="!loading">
         </canvas>
         <div class="right-align ">
-            <button class="btn waves-effect waves-light red" title="{{'stats.buttons.timeline' | translate}}"
-                    ng-click="openDetail()">
-                <i class="material-icons">timeline</i>
-            </button>
+            <qaobee-stat-detail-modal indicators="indicators" title="title" meta="meta" series="series" owners="owners"></qaobee-stat-detail-modal>
         </div>
     </div>
     <div class="card-reveal">
@@ -50,12 +47,5 @@
             </tr>
             </tbody>
         </table>
-    </div>
-</div>
-
-<div id="{{uid}}" class="modal">
-    <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
     </div>
 </div>
