--- a/src/app/modules/sandbox/effective/players/compare.html
+++ b/src/app/modules/sandbox/effective/players/compare.html
@@ -11,8 +11,8 @@
                 <div class="col l3 m3 center hide-on-small-only">
                     &nbsp;
                     <div ng-if="loading">
-                        <div class="preloader-wrapper big active ">
-                            <div class="spinner-layer spinner-green-only">
+                        <div class="preloader-wrapper small active ">
+                            <div class="spinner-layer spinner-blue-only">
                                 <div class="circle-clipper left">
                                     <div class="circle"></div>
                                 </div>
@@ -72,25 +72,25 @@
                 <div class="row">
                     <div class="col s12 m6">
                         <qaobee-radar-chart title="Actions positives offensives" owners="playersIds" series="series"
-                                            start-date="periodicityActive.startDate"
+                                            start-date="periodicityActive.startDate" meta="meta"
                                             end-date="periodicityActive.endDate"
                                             indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart title="Actions négatives offensives" owners="playersIds" series="series"
-                                            start-date="periodicityActive.startDate"
+                                            start-date="periodicityActive.startDate" meta="meta"
                                             end-date="periodicityActive.endDate"
                                             indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart title="Actions positives défensives" owners="playersIds" series="series"
-                                            start-date="periodicityActive.startDate"
+                                            start-date="periodicityActive.startDate" meta="meta"
                                             end-date="periodicityActive.endDate"
                                             indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart title="Actions négatives défensives" owners="playersIds" series="series"
-                                            start-date="periodicityActive.startDate"
+                                            start-date="periodicityActive.startDate" meta="meta"
                                             end-date="periodicityActive.endDate"
                                             indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
                     </div>
