--- a/src/app/components/directives/stats/hand/detailModal.html
+++ b/src/app/components/directives/stats/hand/detailModal.html
@@ -3,7 +3,7 @@
     <i class="material-icons">timeline</i>
 </button>
 <div id="{{uid}}" class="modal">
-    <div class="modal-content">
+    <div class="modal-content compare-modale">
         <form name="myForm">
             <h4 ng-bind="title"></h4>
             <div class="row">
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <canvas ng-if="!noData" id="line" class="chart chart-line" chart-data="data"
-                    chart-colours="colours"
+                    chart-colours="colours" height="200"
                     chart-labels="labels" chart-legend="true" chart-series="series"
             >
             </canvas>
